# event_manager_service

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
app/: main.py
app/api/: __init__.py  equipment.py  users.py
app/core/: config.py
app/models/: database.py  equipment.py  events.py  groups.py  users.py  users_to_groups.py
app/schemas/: equipment.py  users.py
docker/: docker-compose.yml
migrations/: env.py
migrations/versions/: 0b96c0953795_change_equipment_class_field.py  83587b9e8c49_add_equipment_table_and_car_field.py  8560e9ff0b12_initial.py  8a1b0fd771ca_add_equipment_table.py  9469b273b853_add_users_events_and_groups_tables.py
