[tool.poetry]
name = "event_manager"
version = "0.1.0"
description = ""
authors = ["V4SRandiSPB <ivan@v4scale.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
alembic = "^1.8.1"
uvicorn = "^0.18.3"
databases = "^0.6.1"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-lenght = 100

[tool.mypy]
python_version = '3.10'
check_untyped_defs = true
disallow_any_generics = true
follow_imports = 'silent'
no_implicit_reexport = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "camtypes.*",
    "nats.*",
    "pynats.*",
    "loguru.*",
    "requests.*",
    "pytest.*",
    "pytest_mock.*",
    "factory.*",
    "tests.*",
    "faker_enum.*",
    "sqlalchemy.*"
]
ignore_missing_imports = true

[tool.pylint]
[tool.pylint.master]
ignore = ['migrations']
jobs = 0
persistent = ['yes']
unsafe-load-any-extension = ['no']

[tool.pylint.'MESSAGES CONTROL']
disable = ['all']
enable = [
  'old-ne-operator,old-octal-literal,apply-builtin,basestring-builtin,buffer-builtin,cmp-builtin,unichr-builtin,C0203,C0204,C0303,C0304,C0321,C0325,C1001,E0001,E0101,E0104,E0105,E0108,E0213,E0601,E0602,E0701,E0710,E0711,E0712,E1001-E1004,E1121,E1122,E1200,E1201,E1205,E1206,E1300-E1306,W0101,W0104,W0107,W0109,W0231,W0401',
]

[tool.pylint.'REPORTS']
evaluation = ['10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)']
output-format = ['text']
reports = ['no']
score = ['yes']



